--- a/sorts/src/main/webapp/WEB-INF/web.xml
+++ b/sorts/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,8 @@
 		http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <display-name>sorts</display-name>
 
+    <listener>
+        <listener-class>by.it_academy.jd2.jsp.statistics.listeners.ActiveUserListener</listener-class>
+    </listener>
+
 </web-app>
